--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div>         
             <h1>garden</h1> 
           </div>
-          <div class="absolute top-20 left-[83%] flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300" id="nav-links">
+          <div class="absolute top-20 right-0 flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300 " id="nav-links">
             <a href="#">Home</a>
             <a href="#">All Plants</a>
             <a href="#">Contact</a>
