Nav problem solve

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body class="bg-[#141c0f] text-white">
     <header class="bg-[url(./assets/bg-plant.png)] h-svh bg-center bg-no-repeat bg-cover">
-        <nav class="flex justify-between max-w-[90%] mx-auto py-8">
+        <nav class="flex justify-between w-[90%] mx-auto py-8">
           <div>         
             <h1>garden</h1> 
           </div>
-          <div class="absolute top-20 right-0 flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300 " id="nav-links">
+          <div class="absolute top-20 w-[90%] mx-auto flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300 " id="nav-links">
             <a href="#">Home</a>
             <a href="#">All Plants</a>
             <a href="#">Contact</a>
