--- a/index.html
+++ b/index.html
@@ -13,17 +13,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body class="bg-[#141c0f] text-white">
-    <header class="bg-[url(./assets/bg-plant.png)] h-svh bg-center bg-no-repeat bg-cover">
+    <header class="bg-[url(./assets/bg-plant.png)] h-svh bg-center bg-no-repeat bg-cover ">
         <nav class="flex justify-between w-[90%] mx-auto py-8">
           <div>         
-            <h1>garden</h1> 
+            <h1 class="text-4xl font-bold">Garden</h1> 
           </div>
-          <div class="absolute top-20 w-[90%] mx-auto flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300 " id="nav-links">
+          <!-- <div class="absolute top-20 w-[90%] mx-auto flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300 sm:static sm:flex-row sm:overflow-visible" id="nav-links">
             <a href="#">Home</a>
             <a href="#">All Plants</a>
             <a href="#">Contact</a>
-          </div>
-          <div class="text-xl">
+            <a href="#">About us</a>
+          </div> -->
+
+           <div class="nav-links duration-500 sm:static absolute  sm:min-h-fit min-h-[60vh] left-0 top-[-100%] sm:w-auto  w-full flex items-center px-5">
+                <ul class="flex sm:flex-row flex-col sm:items-center sm:gap-[4vw] gap-8" id="nav-links">
+                    <li>
+                        <a class="hover:text-gray-500" href="#">Home</a>
+                    </li>
+                    <li>
+                        <a class="hover:text-gray-500" href="#">All Plants</a>
+                    </li>
+                    <li>
+                        <a class="hover:text-gray-500" href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a class="hover:text-gray-500" href="#">About Us</a>
+                    </li>                  
+                </ul>
+            </div>
+
+          <div class="text-3xl sm:hidden">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
           </div>
         </nav>
