--- a/index.html
+++ b/index.html
@@ -14,34 +14,16 @@
   </head>
   <body class="bg-[#141c0f] text-white">
     <header class="bg-[url(./assets/bg-plant.png)] h-svh bg-center bg-no-repeat bg-cover ">
-        <nav class="flex justify-between w-[90%] mx-auto py-8">
+        <nav class="flex justify-between w-[90%] mx-auto py-8 items-center ">
           <div>         
             <h1 class="text-4xl font-bold">Garden</h1> 
           </div>
-          <!-- <div class="absolute top-20 w-[90%] mx-auto flex flex-col gap-5 text-xl text-right overflow-hidden transition-all duration-300 sm:static sm:flex-row sm:overflow-visible" id="nav-links">
-            <a href="#">Home</a>
-            <a href="#">All Plants</a>
-            <a href="#">Contact</a>
-            <a href="#">About us</a>
-          </div> -->
-
-           <div class="nav-links duration-500 sm:static absolute  sm:min-h-fit min-h-[60vh] left-0 top-[-100%] sm:w-auto  w-full flex items-center px-5">
-                <ul class="flex sm:flex-row flex-col sm:items-center sm:gap-[4vw] gap-8" id="nav-links">
-                    <li>
-                        <a class="hover:text-gray-500" href="#">Home</a>
-                    </li>
-                    <li>
-                        <a class="hover:text-gray-500" href="#">All Plants</a>
-                    </li>
-                    <li>
-                        <a class="hover:text-gray-500" href="#">Contact Us</a>
-                    </li>
-                    <li>
-                        <a class="hover:text-gray-500" href="#">About Us</a>
-                    </li>                  
-                </ul>
-            </div>
-
+          <div id="nav-links" class="absolute flex flex-col gap-5 text-right w-[90%] overflow-hidden transition-all duration-300 top-20 text-xl sm:static sm:block sm:overflow-visible sm:ml-5">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">All Plants</a>
+            <a href="#" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">About us</a>
+          </div>
           <div class="text-3xl sm:hidden">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
           </div>
